# pythonmusic

./: .editorconfig  .gitignore  .taplo.toml  README.md  classes.puml  doto.md  pyproject.json  pyproject.toml  requirements_spec.md
docs/: conf.py  index.rst  modules.rst  pythonmusic.constants.rst  pythonmusic.helpers.rst  pythonmusic.io.ir.rst  pythonmusic.io.rst  pythonmusic.music.rst  pythonmusic.osc.rst  pythonmusic.play.rst  pythonmusic.rst
docs/appendix/: build_doc.rst  class_diagram.rst  licenses.rst  midi.rst  midi_messages.rst
docs/intro/: examples.rst  getting_started.rst  installation.rst
docs/objects/: midi_io.rst  parts.rst  phrase_elements.rst  phrases.rst  players.rst  sample.rst  scores.rst
docs/reference/: constants.rst  helpers.rst  io.rst  music.rst  play.rst  sample.rst  synth.rst  util.rst
docs/source/: api.rst  conf.py  index.rst  usage.rst
docs/src/: conf.py  index.rst
docs/src/api/: constants.rst  midi_io.rst  mods.rst  music.rst  play.rst  scores.rst  sound_font.rst  synthesizer.rst
docs/src/appendix/: build_documentation.rst  licenses.rst  midi.rst
examples/: metronome.py  player_callback.py  prelude_in_c.py  sf_live_play.py  sf_midi_receiver.py  synthesizer_live_play.py  synthesizer_virtual_input.py  virtual_midi_out.py
examples/io/: attach_midi_in.py  attach_midi_out.py  attach_receiver.py  attach_sender.py  host_receiver.py  host_sender.py  virtual_midi_in.py
examples/sampler/: sampler_playback.py
examples/songs/: o_fortuna.py  prelude_in_c.py  spring.py
pythonmusic/: __init__.py  code_play.py  helpers.py  metronome.py  mods.py  osc.py  play.py  sample.py  synth.py  util.py
pythonmusic/constants/: __init__.py  articulations.py  chords.py  control_change.py  durations.py  dynamics.py  instruments.py  intervals.py  messages.py  meta.py  panning.py  percussion.py  pitches.py  scales.py  tempo.py
pythonmusic/helpers/: __init__.py  device_chooser.py  mapping.py
pythonmusic/io/: __init__.py  ir.py  midi_io.py  midi_message.py  midi_receiver.py  midi_sender.py
pythonmusic/midi/: __init__.py  convert.py  file.py  io.py  message.py
pythonmusic/music/: __init__.py  chord.py  helpers.py  note.py  note_collection.py  part.py  phrase.py  phrase_element.py  score.py
pythonmusic/play/: MidiPlayer.py  __init__.py  audio_steam.py  audio_stream.py  code_player.py  ir.py  message_convert.py  midi_player.py  player.py  sample_player.py  sampler.py  synth_player.py  synthesizer.py  target.py
pythonmusic/ui/: __init__.py  widget.py  window.py
pythonmusic/util/: __init__.py
sf/: remove_this_directory
src/pythonmusic/: __init__.py
tests/: test_examples.py  test_helpers.py  test_play.py  test_util.py
tests/io/: test_ir.py  test_midi_inout.py  test_midi_io_integration.py  test_midi_message.py  test_midi_mod_funcs.py
tests/midi/: test_conversion.py  test_message.py
tests/music/: test_chord.py  test_module.py  test_note.py  test_part.py  test_phrase.py  test_score.py
(+33 files in other folders)
