[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pythonmusic"
version = "0.0.1"
dependencies = [
  "mido",
  "python-osc",
  "python-rtmidi",
  "pyfluidsynth",
  "pyaudio",
  "wave",
]
authors = [
  { name = "Darius Löschner", email = "darius.loeschner@uni-potsdam.de" },
  { name = "Florian Reuß", email = "florian.reuss.1@uni-potsdam.de" },
]
description = "Make music in python"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python",
]
keywords = []

[project.urls]
Homepage = "https://gitup.uni-potsdam.de/music-with-pc/pythonmusic"
