[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pythonmusic"
version = "0.0.1"
dependencies = [
  "librosa>=0.11.0",
  "numpy>=2.1",
  "pyaudio>=0.2.14",
  "python-osc>=1.9.3",
  "python-rtmidi>=1.5.8 ",
  # TODO: replace with "normal" version
  # this commit fixes an issure during installation on Windows
  "tinysoundfont @ git+https://github.com/nwhitehead/tinysoundfont-pybind@1a690fb0dc3a7908d1873786e824c4538c030f51",
]
authors = [
  { name = "Darius Löschner", email = "darius.loeschner@uni-potsdam.de" },
  { name = "Florian Reuß", email = "florian.reuss.1@uni-potsdam.de" },
]
description = "Make music in python"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python",
]
keywords = []

[project.urls]
Homepage = "https://gitup.uni-potsdam.de/music-with-pc/pythonmusic"
